mediaserver/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mediaserver
  name: radarr-ing
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: radarr.hlspace.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: radarr
            port:
              number: 7878
  tls:
  - hosts:
    - radarr.hlspace.org
    secretName: radarr-server-tls
